<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/web_error_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_size_32"
            android:layout_marginTop="@dimen/density_size_36"
            android:layout_marginEnd="@dimen/density_size_32"
            android:gravity="center"
            android:text="@string/text_something_went_wrong"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_size_32"
            android:layout_marginTop="@dimen/density_size_16"
            android:layout_marginEnd="@dimen/density_size_32"
            android:gravity="center"
            android:text="@string/text_web_error"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12" />


        <TextView
            android:id="@+id/btn_api_retry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/density_size_44"
            android:layout_gravity="center"
            android:layout_margin="@dimen/text_size_16"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:paddingTop="@dimen/density_size_14"
            android:paddingBottom="@dimen/density_size_14"
            android:text="@string/string_retry"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
